***********************************************************
**********| Version 3.0.0 - Released 2015-04-13 |**********
***********************************************************

* changed namespace und module name
* new backend configuration
* configuration via PROFILE REQUEST; includes credential and country validation
* persistent installment config (months allowed, min rate)
* support of DE and AT credentials in same sub shop
* product categories excludable
* customer groups excludable
* shipping methods excludable
* module order processes (cancel, invoice/shipment, creditmemo) seperatly deactivatable
* changed basket struktur (api v1.6)
* installment plan on order summery page
* improved IBS/PAYMENT QUERY
* few smaller fixes and changes

***********************************************************
**********| Version 2.5.1 - Released 2015-01-30 |**********
***********************************************************

* permits shipping without invoicing
* customer block only on PR

***********************************************************
**********| Version 2.5.0 - Released 2014-12-08 |**********
***********************************************************

* fixed installment without PAYMENT CONFIRM
* no full-return anymore
* no negative basket amount anymore
* ZGB-DSE link by default
* full integration of AT support
* address normalization

***********************************************************
**********| Version 2.4.5 - Released 2014-10-28 |**********
***********************************************************

* cURL SSLVERSION to 1 (TLS1.x)

***********************************************************
**********| Version 2.4.4 - Released 2014-10-22 |**********
***********************************************************

* changed RatePAY gateway URL
* switch to interest rate in Ratenrechner

***********************************************************
**********| Version 2.4.3 - Released 2014-09-05 |**********