@@ -1,4 +1,11 @@
 ***********************************************************
+**********| Version 3.0.1 - Released 2015-05-04 |**********
+***********************************************************
+
+* fixed bug in unit-price-gross calculation
+* deactivated installment plan on order review
+
+***********************************************************
 **********| Version 3.0.0 - Released 2015-04-13 |**********
 ***********************************************************
 
